# GlassBox

./: .env.example  .gitignore  README.md
agents/: README.md  policy.json  requirements.txt
agents/glassbox_agents/: __init__.py  execution.py  llm.py  pipeline.py  risk_agent.py  trading_agent.py
agents/tests/: test_risk_agent.py
backend/: README.md  requirements.txt
backend/app/: chain.py  config.py  db.py  main.py  schemas.py
backend/scripts/: register_policy.py
backend/tests/: test_api.py
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/contracts/: GlassBox.sol
contracts/deployments/: monadTestnet.json
contracts/scripts/: deploy.js
contracts/test/: GlassBox.test.js
demo/: README.md  run_demo.py  scenario.json
gate/: README.md  pyproject.toml
gate/glassbox_gate/: __init__.py  canonical.py  decorator.py
gate/tests/: test_canonical.py
webapp/: .env.example  README.md  package-lock.json  package.json
webapp/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
webapp/app/docs/: page.tsx
webapp/app/feed/: page.tsx
webapp/components/: CodeBlock.tsx  CursorGlass.tsx  DecisionList.tsx  FeedView.tsx  GlassCube.tsx  Hero.tsx  HeroScene.tsx  PriceChart.tsx  StatCards.tsx  VerdictBadge.tsx  VerifyModal.tsx
webapp/lib/: api.ts  canonical.ts  chain.ts  contract.ts  markerColor.ts  types.ts
