[project]
name = "glassbox-gate"
version = "1.0.0"
description = "Reusable onchain commit-and-block gate for GlassBox decisions."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "eth-utils>=4.0",
    "pycryptodome>=3.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["glassbox_gate"]
